displays charging locations dynamically